SERVER-51084 casts to silence int -> double conversions